Tue Apr 29 01:03:20 BST 2003  Fabrice Colin

	* xapian.spec.in: Fixed packaging of docs.

Tue Apr 29 00:33:21 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,testsuite/testsuite.cc,testsuite/testsuite.h: valgrind is
	  now mostly hooked into the testsuite.
	* HACKING: Bison 1.875 doesn't work but Bison 1.875a probably does;
	  suggest CXXFLAGS=-Werror, not CFLAGS.
 
Tue Apr 29 00:14:00 BST 2003  Olly Betts <olly@survex.com>

	* INSTALL: Updated.

Wed Apr 23 14:31:51 BST 2003  Olly Betts <olly@survex.com>

	* api/omtermlistiterator.cc,api/omtermlistiteratorinternal.h,
	  api/omvalueiteratorinternal.h,backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_positionlist.cc,
	  common/inmemory_positionlist.h: Added InMemoryPositionList ctor
	  which takes the positions data to avoid needing to construct and
	  immediately call set_data().

Wed Apr 23 14:14:34 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,include/,matcher/: OmPositionListIterator
	  -> Xapian::PositionListIterator, etc.

Wed Apr 23 13:47:49 BST 2003  Olly Betts <olly@survex.com>

	* xapian.spec.in: Minor tweaks.

Sun Apr 20 22:55:04 BST 2003  Olly Betts <olly@survex.com>

	* extra/omparsequery.h,include/xapian/stem.h,tests/api_db.cc,
	  tests/api_nodb.cc,tests/api_posdb.cc,testsuite/backendmanager.cc:
	  OmStem -> Xapian::Stem; OmExpandDecider -> Xapian::ExpandDecider.

Sun Apr 20 22:52:42 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,api/omenquire.cc,common/expand.h,
	  common/omenquireinternal.h,docs/overview.html,include/,
	  matcher/expand.cc,tests/api_db.cc: OmExpandDecider ->
	  Xapian::ExpandDecider, etc.

Sun Apr 20 22:42:32 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS,api/,backends/,common/,docs/,include/,matcher/,net/,
	  netprogs/,tests/,testsuite/: OmError -> Xapian::Error, etc.

Fri Apr 18 22:40:31 BST 2003  Sam Liddicott <sam@liddicott.com>

	* matcher/multimatch.cc: Fixed so that it updates the OmMSetItem in